2003-05-18  Manu B  <manubee@users.sourceforge.net>
	
	* include/commctrl.h (TVSORTCB): Rename old TV_SORTCB structure.

2003-05-18  Bang Jun-Young <junyoung@netbsd.org>

	* include/winbase.h (CREATE_DEFAULT_ERROR_MODE,
	DEBUG_PROCESS, DEBUG_ONLY_THIS_PROCESS, CREATE_SUSPENDED,
	DETACHED_PROCESS, CREATE_NEW_CONSOLE, NORMAL_PRIORITY_CLASS,
	IDLE_PRIORITY_CLASS, HIGH_PRIORITY_CLASS, REALTIME_PRIORITY_CLASS,
	CREATE_NEW_PROCESS_GROUP, CREATE_UNICODE_ENVIRONMENT,
	CREATE_SEPARATE_WOW_VDM, CREATE_SHARED_WOW_VDM, CREATE_FORCEDOS,
	CREATE_NO_WINDOW): Convert to hexadecimal form for better
	readability.
	(BELOW_NORMAL_PRIORITY_CLASS, ABOVE_NORMAL_PRIORITY_CLASS,
	CREATE_BREAKAWAY_FROM_JOB, CREATE_WITH_USERPROFILE): Add.

2003-05-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ndis.h (NDIS30_MINIPORT_CHARACTERISTICS_S):
	Unname anonymous unions if NONAMELESSUNION not defined.

2003-05-14  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (GMEM_VALID_FLAGS): Add.

2003-05-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/prsht.h (PROPSHEETHEADER[AW]: Mark
	anonymous unions as GCC extension.

2003-05-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oleidl.h  (LPENUMOLEDOCUMENTVIEWS): Remove typedef.
	(IEnumOleDocumentViews): Remove commented out DECLARE_ENUMERATOR.
	* include/docobj.h  (LPENUMOLEDOCUMENTVIEWS): Add typedef (previously
	commented out).
	(IEnumOleDocumentViews): Add definition using DECLARE_ENUMERATOR.

2003-05-12  Earnie Boyd  <earnie@users.sf.net>

	* include/commctrl.h: (MCSC_BACKGROUND, MCSC_TEXT, MCSC_TITLEBK,
	MCSC_TITLETEXT, MCSC_MONTHBK, MCSCTRAILTEXT): Define.
	Thanks to: Robert Wishlaw  <rwishlaw @ shaw . ca>

2003-05-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/olectl.h (IOleControl,IOleControlSite,ISimpleFrameSite,
	IErrorLog,IPropertyBag,IPersistPropertyBag,IPersistStreamInit,
	IPersistMemory,IPropertyNotifySink,IProvideClassInfo,